--- a/sass/modules/layout.scss
+++ b/sass/modules/layout.scss
@@ -117,7 +117,7 @@
 	}
 }
 
-@mixin classes {
+@mixin props {
 	:root {
 		--line-space: 0.5em;
 		--line-offset-top: 0em;
@@ -171,7 +171,9 @@
 		--border-width-bottom: 0px;
 		--border-width-left: 0px;
 	}
+}
 
+@mixin classes {
 	.margin {
 		@include margin;
 	}
